2003-09-29  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c (loader_elf_load): Fix wordsize check.  Submitted by
	Johan Rydberg.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* loader.c [HAVE_CONFIG_H]: Include <config.h>.
	(loader_elf_load): Rewritten architecture check of ELF binary,
	support PPC now.

2003-09-25  Marcus Brinkmann  <marcus@gnu.org>

	* elf.h: Remove cruft.

2003-09-21  Marco Gerards  <metgerards@student.han.nl>

	* output-serial.c (serial_init): Make sure the order of the
	arguments of outb are correct.

	* Makefile.am (AM_CPPFLAGS): New variable.

2003-09-20  Marcus Brinkmann  <marcus@gnu.org>

	* wortel.h (MAX_UNUSED_FPAGES): Move to here from wortel.c.
	(wortel_unused_fpages, wortel_unused_fpages_count): Declare here.
	* ia32-cmain.c: Include "sigma0.h".
	(add_unused_area): New function.
	(find_components): Use add_unused_area to add unused fpages to
	pool.

2003-09-19  Marcus Brinkmann  <marcus@gnu.org>

	* output-serial.c: Include <stdlib.h>.

	* Makefile.am (wortel_SOURCES): Remove getpagesize.c.
	* getpagesize.c: File removed.
	* wortel.c (make_fpages): Use l4_min_page_size, not getpagesize().
	(load_components): Likewise.
	(serve_bootstrap_requests): Likewise.
	(MAX_FPAGES): Use L4_MIN_PAGE_SIZE_LOG2 instead
	hard-coded 10.
	(serve_bootstrap_requests): Likewise.

	* Makefile.am (wortel_CFLAGS): Add -I$(top_srcdir)/libc-parts.
	* output.c: Include <stdlib.h> and <string.h>.
	* output.h (struct output_driver): Add CFG argument to INIT
	function.
	(output_init): Make NAME argument const, rename it to DRIVER.
	* output.c (output_init): Likewise.  Only check if the prefix of
	DRIVER is a driver name.  Then skip a trailing comma and pass the
	remainder via the new variable DRIVER_CFG to the init function of
	the driver.
	* output-vga.c (vga_init): Add CFG argument.
	* output-serial.c: New file by Daniel Wagner <wagi@gmx.de>.
